    # Apps :
        * Creme_config :
            - When you emptied your bricks configuration for "My page" (default or owned)
              with the form, the configuration displayed a ugly "BLOCK" line.
              When you tried to edit this configuration, the form did not propose any choice.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The base form-field 'creme_core.forms.fields.UnionField' did not raise an error
          when a required instance was cleaned with empty sub-data & non required sub-fields.


== Version 2.5.18 ==

  Users side :
  ------------
    # Apps :
        * Opportunities :
            - The title of the brick which displays related Opportunities for Contact/Organisation has been improved.

  Developers side :
  -----------------

    Breaking changes :
    ------------------
        - The Job registry now raises an exception when the class attribute "id" is too long
          (& so cannot be stored in the field "Job.type_id").


== Version 2.5.17 ==

  Users side :
  ------------
    # Apps :
        * Emails :
            - The email form uses HTML line breaks when the HTML body is copied
              from the plain text body.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The custom field brick displayed inner-edition buttons even when it was disabled.
        # The templatetag {% widget_icon instance=... %} did not use "label" argument.


== Version 2.5.16 ==

  Users side :
  ------------
    # The render of custom menu icons has been fixed for non-square images.
    # In menu entries with custom URLs, links are now opened in a new tab.
    # Some escaping issues have been fixed.
    # Apps :
        * Opportunities :
            - In the blocks for related Invoices, Quotes & Sales Orders,
              the color of the statuses were not displayed.

  Developers side :
  -----------------
